--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!doctype html>
-<title></title>
+<!DOCTYPE html>
+<link rel="stylesheet" href="/styles.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway+Dots|Raleway:100,200,400,800,900&display=swap"
+rel="stylesheet">
+<title>PostAd</title>
 <main></main>
 <script src="/bundle.js"></script>
