working on styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="/styles.css">
+<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link href="https://fonts.googleapis.com/css?family=Raleway+Dots|Raleway:100,200,400,800,900&display=swap"
 rel="stylesheet">
 <title>PostAd</title>
